[gd_scene load_steps=12 format=2]

[ext_resource path="res://Objects/Rock/Rock.gd" type="Script" id=1]
[ext_resource path="res://Objects/Rock/Hitbox.gd" type="Script" id=2]
[ext_resource path="res://Sounds/rock_slide.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/rock_hit.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/rock_slide_off.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/wind_rushing.wav" type="AudioStream" id=6]
[ext_resource path="res://Objects/Rock/Hitbox2.gd" type="Script" id=7]

[sub_resource type="BoxShape" id=1]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="BoxShape" id=3]

[sub_resource type="BoxShape" id=4]

[node name="Rock" type="RigidBody" groups=[
"resettable",
"rock",
]]
collision_layer = 4
collision_mask = 6
contacts_reported = 3
contact_monitor = true
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="Hitbox" type="Area" parent="."]
collision_layer = 0
collision_mask = 32
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Hitbox"]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0 )
shape = SubResource( 3 )

[node name="Hitbox2" type="Area" parent="."]
collision_layer = 512
collision_mask = 512
script = ExtResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="Hitbox2"]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0 )
shape = SubResource( 3 )

[node name="PlayerHitbox" type="KinematicBody" parent="." groups=[
"ghost",
"rock_hitbox",
]]
collision_layer = 16
collision_mask = 3

[node name="CollisionShape" type="CollisionShape" parent="PlayerHitbox"]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0 )
shape = SubResource( 4 )

[node name="Slide" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )
unit_db = 25.984
unit_size = 6.1
doppler_tracking = 2

[node name="Hit" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
unit_size = 3.6
pitch_scale = 0.7

[node name="SlideOff" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
pitch_scale = 1.56

[node name="InAir" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 6 )
unit_size = 4.4

[node name="GroundDetector" type="RayCast" parent="."]
enabled = true
collision_mask = 2
[connection signal="body_entered" from="." to="." method="_on_Rock_body_entered"]
[connection signal="nozone" from="Hitbox" to="." method="_on_Hitbox_nozone"]
[connection signal="pushed" from="Hitbox" to="." method="_on_Hitbox_pushed"]
[connection signal="spun" from="Hitbox" to="." method="_on_Hitbox_spun"]
[connection signal="zone" from="Hitbox" to="." method="_on_Hitbox_zone"]
[connection signal="pushed" from="Hitbox2" to="." method="_on_Hitbox2_pushed"]
